<resources>
    <string name="app_name">FinancialPal</string>
    <string name="AddIncomeBtn">Add Income</string>
    <string name="amountLbl">Amount</string>
    <string name="categoryLbl">Category</string>
    <string name="AmountTxt">$</string>
    <string name="CategoryTxt" />
    <string name="SubmitBtn">Submit</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="title_activity_expense">expense</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
