<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/income"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.income.IncomeFragment">


<!--    THIS LAYOUT IS TEMPORARY JUST TO GET THE FUNCTIONALITY WORKING-->

<!--    Layout for labels and textboxes  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="170dp">


<!--        Label for the money amount  -->
        <TextView
            android:id="@+id/lblAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amountLbl" />

<!--        Textbox for the income money amount-->


        <!--        Label for the income type/category   -->
        <TextView
            android:id="@+id/txtAmount"
            android:layout_width="250px"
            android:layout_height="wrap_content"
            android:text="@string/AmountTxt" />

        <TextView
            android:id="@+id/lblCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoryLbl" />

        <TextView
            android:id="@+id/txtCategory"
            android:layout_width="250px"
            android:layout_height="wrap_content"
            android:text="@string/CategoryTxt" />

        <!--        Textbox for the income type/category  -->

    </LinearLayout>


<!--    Button to Add Income-->
    <Button
        android:id="@+id/btnAddIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="25dp"
        android:text="@string/AddIncomeBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



<!-- Use FrameLayout to display transactions-->